--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,6 +19,9 @@
    <% if (title === 'Home') { %>
     <link rel="stylesheet" href="/css/home.css" />
   <% } %>
+  <% if (title && title.includes('Dashboard')) { %>
+  <link rel="stylesheet" href="/css/dashboard.css" />
+<% } %>
 </head>
 <body>
 
