--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,10 +123,11 @@
 
         <!-- Preview card (shows on desktop) -->
         <div class="preview-card">
-          <div class="preview-mock">
-            <span>Dashboard Preview</span>
-          </div>
-        </div>
+  <div class="preview-mock">
+    <img src="\images\dashboard-preview.jpg" alt="Dashboard Preview" class="dashboard-preview-img">
+  </div>
+</div>
+
       </div>
     </div>
   </main>
